# rini

./: .gitignore  LICENSE  README.md
examples/: rini_example.c
examples/resources/: rini_example.ini
projects/CMake/: CMakeLists.txt
src/: rini.h
